vpro-k8s-test/1-app-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vpro-vs
spec:
  hosts:
  - "vproapp.rx.com"
  gateways:
  - vpro-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vproapp-service 
        port:
          number: 80
