vpro-k8s-test/2-app-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vpro-vs
spec:
  hosts:
  - "vproapp.rx.com"
  gateways:
  - vpro-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vproapp-service 
        port:
          number: 80
        subset: vproapp-v1
      weight: 0
    - destination:
        host: vproapp-service 
        port:
          number: 80
        subset: vproapp-v11
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vpro-dr
spec:
  host: vproapp-service
  trafficPolicy: ~
  subsets:
  - name: vproapp-v1 # defaine a subset - v1
    labels:
      version: vproapp-v1
  - name: vproapp-v11 # defaine a subset - v11
    labels:
      version: vproapp-v11
