vpro-k8s-test/5-app-circuit-breaking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vpro-vs
spec:
  hosts:
  - "vproapp.rx.com"
  gateways:
  - vpro-gateway
  http:
  - route:
    - destination:
        host: vproapp-service 
       
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vpro-dr
spec:
  host: vproapp-service
  trafficPolicy: 
    outlierDetection:
      maxEjectionPercent: 100
      consecutive5xxErrors: 2
      interval: 5s
      baseEjectionTime: 60s
